// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockchain: Ethereum createLink: should create erc1271 proof correctly 1`] = `
Object {
  "address": "0xbe6c27620b271dd76f1787cdef1f4375cff3fa1f",
  "chainId": 1337,
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "0xfa69ccf4a94db61325429d37c58c6de534b73f439700fbb748209890a5780f3365a5335f82d424d7f9a63ee41b637c116e64ef2f32c761bb065e4409f978c4bb1c",
  "type": "erc1271",
  "version": 1,
}
`;

exports[`Blockchain: Ethereum createLink: should create ethereumEOA proof correctly 1`] = `
Object {
  "address": "0x8fe2c4516e920425e177658aaac451ca0463ed69",
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "0xfa69ccf4a94db61325429d37c58c6de534b73f439700fbb748209890a5780f3365a5335f82d424d7f9a63ee41b637c116e64ef2f32c761bb065e4409f978c4bb1c",
  "type": "ethereum-eoa",
  "version": 1,
}
`;
